# octfusion

./: pyproject.toml  sams_script.py
models/: octfusion_model_union.py
scripts/: run_snet_cond.sh  run_snet_uncond.sh  run_snet_vae.sh
