[tool.poetry]
name = "octfusion"
version = "0.1.0"
description = ""
authors = ["Sam Willis <sjw238@cam.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
ocnn = "2.2.2"
h5py = "^3.12.1"
termcolor = "^2.5.0"
scipy = "^1.15.0"
einops = "^0.8.0"
tqdm = "^4.67.1"
matplotlib = "^3.10.0"
opencv-python = "^4.10.0.84"
pymcubes = "^0.1.6"
imageio = "^2.36.1"
trimesh = "^4.5.3"
omegaconf = "^2.3.0"
tensorboard = "^2.18.0"
notebook = "^7.3.2"
numpy = "^2.2.1"
yacs = "^0.1.8"
plyfile = "^1.1"
scikit-image = "^0.25.0"
wget = "^3.2"
objaverse = "^0.1.7"
pandas = "^2.2.3"
kornia = "^0.7.4"
ftfy = "^6.3.1"
regex = "^2024.11.6"
timm = "^1.0.12"
open3d = "^0.18.0"
mesh2sdf = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
